--- a/Ecommerce_API/Ecommerce_API.csproj
+++ b/Ecommerce_API/Ecommerce_API.csproj
@@ -199,21 +199,27 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Data\Concrete\CartDAL.cs" />
+    <Compile Include="Data\Concrete\ErrorDAL.cs" />
     <Compile Include="Data\Concrete\ProductDAL.cs" />
     <Compile Include="Data\Concrete\UserDAL.cs" />
     <Compile Include="Data\DBHelper.cs" />
     <Compile Include="Data\JWTHelper.cs" />
+    <Compile Include="Data\Logger.cs" />
     <Compile Include="Data\PasswordHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CartModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\RegisterModel.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -285,6 +291,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Cart\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\bootstrap.min.js.map" />
