--- a/Ecommerce_API/Ecommerce_API.csproj
+++ b/Ecommerce_API/Ecommerce_API.csproj
@@ -199,13 +199,15 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CartController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\UserController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Data\Concrete\AdminDAL.cs" />
     <Compile Include="Data\Concrete\CartDAL.cs" />
     <Compile Include="Data\Concrete\ErrorDAL.cs" />
+    <Compile Include="Data\Concrete\OrderDAL.cs" />
     <Compile Include="Data\Concrete\ProductDAL.cs" />
     <Compile Include="Data\Concrete\UserDAL.cs" />
     <Compile Include="Data\DBHelper.cs" />
@@ -215,10 +217,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AllUserModel.cs" />
     <Compile Include="Models\CartModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
+    <Compile Include="Models\OrderModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\RegisterModel.cs" />
+    <Compile Include="Models\SalesCategoryModel.cs" />
+    <Compile Include="Models\SalesMonthModel.cs" />
+    <Compile Include="Models\StocksModel.cs" />
+    <Compile Include="Models\TopProductsModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
