--- a/Ecommerce_Application/Ecommerce_Application.csproj
+++ b/Ecommerce_Application/Ecommerce_Application.csproj
@@ -154,12 +154,20 @@
     </Compile>
     <Compile Include="Helpers\APIHelper.cs" />
     <Compile Include="Models\CartModel.cs" />
+    <Compile Include="Models\DeliveryModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\RegisterModel.cs" />
+    <Compile Include="Models\SalesByCategoryModel.cs" />
+    <Compile Include="Models\SalesByMonthModel.cs" />
+    <Compile Include="Models\StocksModel.cs" />
+    <Compile Include="Models\TopsSellingProductModel.cs" />
     <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Models\ViewOrdersModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AdminServices.cs" />
     <Compile Include="Services\CartServices.cs" />
+    <Compile Include="Services\OrderServices.cs" />
     <Compile Include="Services\ProductServices.cs" />
     <Compile Include="Services\ProfileServices.cs" />
     <Compile Include="Services\UserServices.cs" />
@@ -185,6 +193,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\App\Dashboard.js" />
+    <Content Include="Scripts\App\SalesDashboard.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -229,6 +238,10 @@
     <Content Include="Views\Admin\_Dashboard.cshtml" />
     <Content Include="Views\Admin\_AddProduct.cshtml" />
     <Content Include="Views\Admin\_Users.cshtml" />
+    <Content Include="Views\Order\ViewOrders.cshtml" />
+    <Content Include="Views\Order\_ViewOrdersSec.cshtml" />
+    <Content Include="Views\Admin\_Stocks.cshtml" />
+    <Content Include="Views\Admin\_Orders.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
