--- a/Ecommerce_API/Ecommerce_API.csproj
+++ b/Ecommerce_API/Ecommerce_API.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Models\CartModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\OrderModel.cs" />
+    <Compile Include="Models\PasswordModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\RegisterModel.cs" />
     <Compile Include="Models\SalesCategoryModel.cs" />
