--- a/Ecommerce_Application/Ecommerce_Application.csproj
+++ b/Ecommerce_Application/Ecommerce_Application.csproj
@@ -190,6 +190,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\APIHelper.cs" />
+    <Compile Include="Models\AdminOrdersModel.cs" />
     <Compile Include="Models\CartModel.cs" />
     <Compile Include="Models\DeliveryModel.cs" />
     <Compile Include="Models\HeaderModel.cs" />
