--- a/Ecommerce_Application/Ecommerce_Application.csproj
+++ b/Ecommerce_Application/Ecommerce_Application.csproj
@@ -191,6 +191,7 @@
     </Compile>
     <Compile Include="Helpers\APIHelper.cs" />
     <Compile Include="Models\AdminOrdersModel.cs" />
+    <Compile Include="Models\AllUserModel.cs" />
     <Compile Include="Models\CartModel.cs" />
     <Compile Include="Models\DeliveryModel.cs" />
     <Compile Include="Models\HeaderModel.cs" />
