New Search Page Added

--- a/Ecommerce_Application/Ecommerce_Application.csproj
+++ b/Ecommerce_Application/Ecommerce_Application.csproj
@@ -283,6 +283,7 @@
     <Content Include="Views\Order\_ViewOrdersSec.cshtml" />
     <Content Include="Views\Admin\_Stocks.cshtml" />
     <Content Include="Views\Admin\_Orders.cshtml" />
+    <Content Include="Views\Product\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
